crates/procenv/tests/compile_fail/optional_requires_option_type.rs
//! Test: optional flag requires Option<T> type

use procenv::EnvConfig;

#[derive(EnvConfig)]
struct Config {
    #[env(var = "API_KEY", optional)]
    api_key: String,
}

fn main() {}
